Update images directory and add imgix meta tags

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Oakland 2018</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property="ix:host" content="de-oakland-2018.imgix.net">
+  <meta property="ix:useHttps" content="true">
   <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,600,600i" rel="stylesheet">
   <script src="./imgix.js"></script>
@@ -53,6 +55,9 @@
       <img src="./images/months/10.jpg" />
     </div>
   </div>
+  <script>
+
+  </script>
   <script src="./script.js"></script>
 </body>
 
