Switch to imgix

--- a/index.html
+++ b/index.html
@@ -25,34 +25,34 @@
   </h1>
   <div class="grid">
     <div class="grid__item">
-      <img src="./images/months/01.jpg" />
+      <img ix-path="01.jpg" />
     </div>
     <div class="grid__item">
-      <img src="./images/months/02.jpg" />
+      <img ix-path="02.jpg" />
     </div>
     <div class="grid__item--portrait">
-      <img src="./images/months/03.jpg" />
+      <img ix-path="03.jpg" />
     </div>
     <div class="grid__item--portrait">
-      <img src="./images/months/04.jpg" />
+      <img ix-path="04.jpg" />
     </div>
     <div class="grid__item">
-      <img src="./images/months/05.jpg" />
+      <img ix-path="05.jpg" />
     </div>
     <div class="grid__item--portrait">
-      <img src="./images/months/06.jpg" />
+      <img ix-path="06.jpg" />
     </div>
     <div class="grid__item--portrait">
-      <img src="./images/months/07.jpg" />
+      <img ix-path="07.jpg" />
     </div>
     <div class="grid__item">
-      <img src="./images/months/08.jpg" />
+      <img ix-path="08.jpg" />
     </div>
     <div class="grid__item">
-      <img src="./images/months/09.jpg" />
+      <img ix-path="09.jpg" />
     </div>
     <div class="grid__item">
-      <img src="./images/months/10.jpg" />
+      <img ix-path="10.jpg" />
     </div>
   </div>
   <script>
