--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <meta property="ix:host" content="de-oakland-2018.imgix.net">
   <meta property="ix:useHttps" content="true">
   <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,600,600i" rel="stylesheet">
   <script src="./imgix.js"></script>
 </head>
 
@@ -26,6 +25,32 @@
   <div class="grid">
     <div class="grid__item">
       <img ix-path="01.jpg" />
+    </div>
+    <div class="grid__item--portrait">
+      <p>
+        Since 2016, I’ve created a playlist of music for each month of the year, with corresponding cover art. For
+        2018’s cover art series, I chose to photograph the street life of Chinatown in Oakland, California, my current
+        home.
+      </p>
+      <p>
+        All images were shot on a Leica Q and edited in Adobe Lightroom. For more links to my work, go to <a href="https://daneden.me">my
+          website</a>.
+      </p>
+      <details>
+        <summary>Links to playlists</summary>
+        <ol>
+          <li><a href="https://open.spotify.com/user/daneden/playlist/1nX5BEREXXrrGKDJ4GqGF3?si=5tXq6_23SDeftOOspvhtqw">January</a></li>
+          <li><a href="https://open.spotify.com/user/daneden/playlist/379mOZblgm1SHbioWCNN46?si=szhjvwETQ3eyiS-CgL3aXQ">February</a></li>
+          <li><a href="https://open.spotify.com/user/daneden/playlist/4XAA4bwQfZUqL1hk3TnW7f?si=Ee5rcBU3TWu0N-_bUoEIUQ">March</a></li>
+          <li><a href="https://open.spotify.com/user/daneden/playlist/2c4vcs0AWZ8titm0CktPy1?si=mSGWDYX-TpetoZHkj-cMNQ">April</a></li>
+          <li><a href="https://open.spotify.com/user/daneden/playlist/3TlqcpvPkjqpT6F2qe8vJ8?si=uY0uFlwIQzugU6bNaAosaA">May</a></li>
+          <li><a href="https://open.spotify.com/user/daneden/playlist/7j34go4jYfNKbj0bFRvikN?si=Wgoc5GjZSRixTi8p0TF7Uw">June</a></li>
+          <li><a href="https://open.spotify.com/user/daneden/playlist/0yA2yfChFIaWC9uPLQNfsZ?si=nZIamjYxSvq7ATwX0Ls76A">July</a></li>
+          <li><a href="https://open.spotify.com/user/daneden/playlist/0psbWZSL1dVW0pBpQL8SJd?si=G8OS0niXQKuGcQ0BZg7T4A">August</a></li>
+          <li><a href="https://open.spotify.com/user/daneden/playlist/5eiyd0tmNxvUElaUf6B7Yj?si=Q5YSm_RxQuGrIFx0-2OowA">September</a></li>
+          <li><a href="https://open.spotify.com/user/daneden/playlist/6I0zLyj3BRdpb2UnCZk6pp?si=XHw8QP_5QgWNnfeY4yT9zw">October</a></li>
+        </ol>
+      </details>
     </div>
     <div class="grid__item">
       <img ix-path="02.jpg" />
@@ -45,7 +70,7 @@
     <div class="grid__item--portrait">
       <img ix-path="07.jpg" />
     </div>
-    <div class="grid__item">
+    <div class="grid__item--portrait">
       <img ix-path="08.jpg" />
     </div>
     <div class="grid__item">
@@ -55,9 +80,6 @@
       <img ix-path="10.jpg" />
     </div>
   </div>
-  <script>
-
-  </script>
   <script src="./script.js"></script>
 </body>
 
