--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@
                 >December</a
               >
             </li>
+            <li>
+              <a
+                href="https://open.spotify.com/user/daneden/playlist/1l8cBeDUZeggj3gBUsMTNs?si=ad_vMF5lQemnKuuRa4jrjQ"
+                >2018</a
+              >
+            </li>
           </ol>
         </details>
       </div>
